# HelloEngine

./: .gitmodules  CMakeLists.txt  README.md  build_windows.bat
doc/: HelloEngine-Doxyfile.conf  dx12.md  mini_engine.md
source/: CMakeLists.txt  common.cmake
source/hello_world/: CMakeLists.txt  hello_world.cpp  hello_world.h  hello_world_ps.hlsl  hello_world_vs.hlsl  main.cpp
source/model_viewer/: CMakeLists.txt  main.cpp  model_viewer.cpp  model_viewer.h
source/runtime/: CMakeLists.txt
source/runtime/core/: CMakeLists.txt  buffer_manager.cpp  buffer_manager.h  byte_address_buffer.cpp  byte_address_buffer.h  camera.h  color.h  color_buffer.cpp  color_buffer.h  command_allocator_pool.cpp  command_allocator_pool.h  command_context.cpp  command_context.h  command_context_manager.cpp  command_context_manager.h  command_list_manager.cpp  command_list_manager.h  command_queue.cpp  command_queue.h  command_signature.cpp  command_signature.h  compute_context.cpp  compute_context.h  depth_buffer.cpp  depth_buffer.h  descriptor_allocator.cpp  descriptor_allocator.h  descriptor_heap.cpp  descriptor_heap.h  descriptor_heap.inl  display.cpp  display.h  dynamic_descriptor_heap.cpp  dynamic_descriptor_heap.h  dynamic_descriptor_heap_inner.cpp  dynamic_descriptor_heap_inner.h  game_core.cpp  game_core.h  game_module.h  global.cpp  (+33 more)
source/runtime/core/math/: bounding_box.h  bounding_sphere.h  common.h  matrix4.h  quaternion.h  scalar.h  transform.h  vector.h  vector.inl
source/runtime/core/util/: command_line_arg.cpp  command_line_arg.h
source/runtime/model/: CMakeLists.txt  model.h  model_h3d.cpp  model_h3d.h  model_instance.cpp  model_instance.h  model_loader.cpp  model_loader.h  model_obj.cpp  model_obj.h  renderer.cpp  renderer.h
source/runtime/model/shaders/: common.hlsli  hello_vs.hlsl
source/test/: CMakeLists.txt  dx_sample_base.h  test_dx_minimal.cpp
